--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "mocha": "~1.20.1",
         "require-uncache": "0.0.2",
         "karma": "~0.12.16",
-        "grunt-shell": "~0.7.0"
+        "grunt-shell": "~0.7.0",
+        "istanbul": "~0.3.0"
     }
 }
